--- a/todo.css
+++ b/todo.css
@@ -24,3 +24,10 @@ input:nth-of-type(2) {
 	border: 1px solid red;
 	margin-left: 10px;
 }
+#submit1 {
+	background-color: blue;
+	color: white;
+	font-style: italic;
+	border: 1px solid blue;
+	margin-left: 10px;
+}
