--- a/弹框组件.css
+++ b/弹框组件.css
@@ -1,3 +1,60 @@
 body {
 	background-color: pink;
 }
+
+input {
+	display: block;
+	width: 150px;
+	height: 30px;
+	margin-top: 10px;
+	font-size: 15px;
+	color: #ccc;
+	background-color: white;
+	-webkit-border-radius: 50px;
+	text-align: center;
+}
+
+#divbox {
+	width: 300px;
+	height: 200px;
+	background-color: white;
+	-webkit-border-radius: 10px;
+	vertical-align: center;
+	overflow: hidden;
+  z-index: 2;
+}
+
+#divbox p {
+	color: #ccc;
+	margin-left: 10px;
+}
+.divtop {
+	width: 300px;
+	height: 30px;
+	background-color: #e75187;
+}
+
+.bottonright {
+	width: 20px;
+	height: 20px;
+	color: black;
+	font-size: 20px;
+	margin-top: 5px;
+	margin-right: 5px;
+	text-align: center;
+	-webkit-border-radius: 100px;
+	background-color: #e4ecef;
+	float: right;
+}
+
+.bottonright:hover {
+	background-color: #ccc;
+}
+
+.bottonb {
+	color: #ccc;
+	background-color: #e75187;
+	float:right;
+  margin-top: 40px;
+  margin-right: 20px;
+}
