--- a/window.css
+++ b/window.css
@@ -7,4 +7,64 @@
 	margin-left: -250px;
 	top: 100px;
 	box-shadow: 0 0 12px rgba(0,0,0,.5); 
+	background: #fff;
 }
+
+.window_boundingBox input {
+	width: 100px;
+	position: fixed;
+	bottom: 10px;
+	left: 50%;
+	margin-left: -50px;
+}
+
+.window_header {
+	background: #333;
+	color: #fff;
+	text-align: center;
+	padding: 5px;
+	font-size: 20px;
+}
+
+.window_body {
+	padding: 10px;
+}
+
+.window_closeBtn {
+	position: absolute;
+	right: 0;
+	top: 0;
+	padding: 5px;
+	font-size: 20px;
+	background: blue;
+	color: #fff;
+	cursor: pointer;
+}
+
+.window_alertBtn {
+	width: 100px;
+	position: absolute;
+	bottom: 10px;
+	left: 50%;
+	margin-left: -50px;
+}
+
+.window_mask {
+	width: 100%;
+	height: 100%;
+	background: #000;
+	opacity: 3;
+	position: absolute;
+	left: 0;
+	top: 0;
+}
+
+
+
+/* skin for a */
+.window_skin_a.window_boundingBox {}
+.window_skin_a .window_alertBtn {}
+.window_skin_a .window_header {}
+.window_skin_a .window_closeBtn {}
+
+
